[package]
name = "calc_task"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.13.1"
iced_aw = "0.12.2"
itertools = "0.14.0"
rfd = { version = "0.15.3" }
thiserror = "2.0.12"
vigenere_rs = { path = "vigenere-rs", package = "vigenere-rs" }
winit = { version = "0.30.9", features = ["rwh_06"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }

[workspace]
members = ["vigenere-rs"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
